# autoware_interface

./: CMakeLists.txt  package.xml
include/: autoware_interface_node.hpp
include/autoware_interface/: autoware_interface.hpp
include/roscco_to_aw/: roscco_to_aw.hpp
launch/: autoware_interface.launch.xml  roscco2AW.launch.xml
src/: autoware_interface.cpp  autoware_interface_node.cpp  roscco_to_aw.cpp
